# scattr

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  auto_assign.yml  dependabot.yml  release-drafter.yml
.github/workflows/: assign_reviewers.yml  bump_version.yml  deploy.yml  deploy_docker.yml  quality.yml  release.yml  test.yml  update-release-draft.yml
dbsc/: pipeline_description.json  run.py
dbsc/config/: snakebids.yml
dbsc/resources/example_scripts/freesurfer/: 2_thalamusparc
dbsc/resources/example_scripts/mrtpipelines/: 2_run-mrtpipelines-native  3_run-mrtpipelines-subcorticalconn  5_run-cleanTract  getTDI
dbsc/resources/example_scripts/zona_bb_subcortex/: applyXfrm_ZonaBB.sh  convexHull_roi
dbsc/resources/freesurfer/: desc-FreesurferThal_dseg.tsv  fs_labels.csv
dbsc/resources/zona_bb_subcortex/: convexHull_roi.py  desc-ZonaBBSubcor_dseg.tsv  subcortical-labels.csv
dbsc/resources/zona_bb_subcortex/transforms/: README.md  mni2009b-to-mni152-T1w0GenericAffine.mat
dbsc/workflow/: Snakefile
dbsc/workflow/rules/: freesurfer.smk  mrtpipelines.smk  zona_bb_subcortex.smk
dbsc/workflow/scripts/mrtpipelines/: create_exclude_mask.py  create_roi_mask.py
dbsc/workflow/scripts/zona_bb_subcortex/: get_num_labels.py
docs/: conf.py  index.md  requirements.txt
docs/contributing/: contributing.md
docs/getting_started/: docker.md  installation.md  singularity.md
docs/outputs/: output_files.md  visualization.md
docs/usage/: cli.md  faq.md  useful_options.md
docs/workflow/: workflow.md
scattr/: pipeline_description.json  run.py
scattr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scattr/config/: snakebids.yml
scattr/resources/example_scripts/: README.md
scattr/resources/example_scripts/mrtpipelines/: 0_run-mrtpipelines  4_run-mrtpipelines-maskedconn  4b_subconn_maskedeval  6_run-mrtpipelines-combineMasked  extractCST  getSubconn
scattr/resources/example_scripts/zona_bb_subcortex/: addFSThalamus.sh  convexHull_roi
scattr/resources/hippunfold/: desc-HippUnfoldSubfields_dseg.tsv
scattr/resources/zona_bb_subcortex/: desc-ZonaBBSubcor_dseg.tsv  desc-ZonaBB_dseg.tsv
scattr/workflow/: Snakefile
scattr/workflow/envs/: ants.yaml  label_merge.yaml  labelmerge.yaml  mrtrix3.yaml  neurovis.yaml
scattr/workflow/lib/: utils.py
scattr/workflow/report/: dseg_qc.rst  reg_qc.rst
scattr/workflow/rules/: freesurfer.smk  hippunfold.smk  mrtpipelines.smk  qc.smk  zona_bb_subcortex.smk  zona_bb_subcortex.smk~HEAD
scattr/workflow/rules/mrtpipelines/: filter_tck.smk  preproc.smk  tractography.smk
scattr/workflow/scripts/hippunfold/: standardize_labels.py
scattr/workflow/scripts/mrtpipelines/: create_exclude_mask.py  create_roi_mask.py
scattr/workflow/scripts/qc/: registration_qc.py  segmentation_image.py  segmentation_qc.py
scattr/workflow/scripts/zona_bb_subcortex/: add_brainstem.py  convexHull_roi.py  create_seg_mask.py  get_num_labels.py
test/data/derivatives/: .snakebids
test/data/derivatives/config/: snakebids.yml
test/data/derivatives_sessions/config/: snakebids.yml
