[tool.poetry]
name = "scattr"
version = "0.3.0-pre.7"
description = "[Snakebids app] Structural connectivity between targeted regions"
authors = [
    "Jason Kai <tkai@uwo.ca>",
    "Tristan Kuehn",
    "Ali R. Khan",
    "Roy A.M. Haast",
    "Jonathan C. Lau",
]
readme = "README.md"
documentation = "https://scattr.readthedocs.io"
packages = [
    { include = "scattr" }
]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
snakebids = "^0.8.0"
nibabel = "^3.2.2"
nilearn = "^0.10.0"
numpy = "^1.22.3"
scipy = "^1.8.0"
labelmerge = {git = "https://github.com/khanlab/labelmerge.git", rev = "v0.4.4"}
matplotlib = "^3.7.1"
niworkflows = "^1.7.9"
pygments = "^2.15.1"

[tool.poetry.group.dev.dependencies]
pytest-console-scripts = "1.2"
pytest = "^7.0.1"
black = "^22.1.0"
isort = "^5.10.1"
poethepoet = "^0.13.1"
pre-commit = "^2.17.0"
snakefmt = "^0.6.1"
yamlfix = "^1.1.0"
ruff = "^0.0.267"

[tool.poetry.scripts]
scattr = 'scattr.run:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
setup = "pre-commit install"
isort = "isort scattr"
isort-check = "isort -c scattr"
black = "black scattr"
black-check = "black --check scattr"
ruff = "ruff --fix scattr"
ruff-check = "ruff scattr"
snakefmt = "snakefmt scattr"
snakefmt-check = "snakefmt --check scattr"
quality = ["yamlfix", "isort", "black", "ruff", "snakefmt"]
quality-check = [
    "yamlfix-check",
    "isort-check",
    "black-check",
    "ruff-check",
    "snakefmt-check",
]
test = [
    "test_base",
    "test_freesurfer",
    "test_responsemean",
    "test_dwi",
    "test_labelmerge",
    "test_skip_labelmerge",
    "test_sessions"
]

[tool.poe.tasks.test_base]
shell = """
python ./scattr/run.py ./test/data/bids ./test/data/derivatives/ participant \
    --fs-license ./test/.fs_license -np --force-output
"""

[tool.poe.tasks.test_freesurfer]
shell = """
python ./scattr/run.py ./test/data/bids test/data/derivatives/ participant \
    --freesurfer_dir ./test/data/derivatives/freesurfer \
    --fs-license ./test/.fs_license -np --force-output
"""

[tool.poe.tasks.test_responsemean]
shell = """
python ./scattr/run.py ./test/data/bids test/data/derivatives/ participant \
    --responsemean_dir ./test/data/derivatives/mrtrix/avg \
    --fs-license ./test/.fs_license -np --force-output
"""

[tool.poe.tasks.test_dwi]
shell = """
python ./scattr/run.py ./test/data/bids_nodwi test/data/derivatives/ \
    participant --dwi_dir ./test/data/derivatives/prepdwi \
    --fs-license ./test/.fs_license -np --force-output
"""

[tool.poe.tasks.test_labelmerge]
shell = """
python ./scattr/run.py ./test/data/bids test/data/derivatives/ participant \
    --labelmerge_base_dir ./base_dir \
    --labelmerge_overlay_dir ./overlay_dir \
    --skip_brainstem --skip_thal_seg \
    --fs-license ./test/.fs_license -np --force-output
"""

[tool.poe.tasks.test_skip_labelmerge]
shell = """
python ./scattr/run.py ./test/data/bids test/data/derivatives/ participant \
    --skip_labelmerge --skip_brainstem --skip_thal_seg \
    --fs-license ./test/.fs_license -np --force-output
"""

[tool.poe.tasks.test_sessions]
shell = """
python ./scattr/run.py ./test/data/bids_sessions \
    test/data/derivatives_sessions/ participant \
    --fs-license ./test.fs_license -np --force-output
"""

[tool.poe.tasks.yamlfix]
shell = """
find . -type f \\( \
    -iname \\*.yaml -o -iname \\*.yml ! -iname snakemake* \
    ! -iname snakebids* \
\\) -exec yamlfix {} \\;
"""

[tool.poe.tasks.yamlfix-check]
shell = """
find . -type f \\( \
    -iname \\*.yaml -o -iname \\*.yml ! -iname snakemake* \
    ! -iname snakebids* \
\\) -exec yamlfix --check {} \\;
"""

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79
builtins = [ "snakemake" ]

[tool.snakefmt]
line_length = 79
include = '\.smk$|^Snakefile'
