[project]
name = "scattr"
version = "0.3.4-pre.1"
description = "[Snakebids app] Structural connectivity between targeted regions"
readme = "README.md"
license = "MIT"
authors = [{name = "Jason Kai, Tristan Kuehn, Roy A.M. Haast & Jonathan C. Lau", email = "tkai@uwo.ca"}]
requires-python = ">= 3.11"
dependencies = []
scripts = { scattr = "scattr.run:app.run" }

[package.build.backend]
name = "pixi-build-python"
version = "==0.4.0"

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64"]

[tool.pixi.feature.runtime.dependencies]
snakebids = ">=0.14.0,<0.15"
appdirs   = ">=1.4.4,<2.0.0"
pyvista   = ">=0.44.2,<0.45.0"
conda = ">=25.5.0,<26"

[tool.pixi.feature.dev.dependencies]
flake8 = ">=4.0.1,<5.0.0"
pytest-console-scripts = ">=1.2.1,<2.0.0"
pytest = "*"
black = ">=24.0.0,<25.0.0"
pylint = ">=2.11.1,<3.0.0"
isort = ">=5.10.1,<6.0.0"
poethepoet = ">=0.10.0,<0.11.0"
snakefmt = ">=0.10.0,<0.11.0"
pygraphviz = "*"
Jinja2 = ">=3.0.3,<4.0.0"

[tool.pixi.environments.default]
features = ["runtime"]

[tool.pixi.environments.dev]
features = ["runtime", "dev"]

[tool.pixi.environments.dev-only]
features = ["dev"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pixi.pypi-dependencies]
scattr = { path = ".", editable = true }

[tool.pixi.tasks]
setup = "pre-commit install"
ruff-lint = "ruff check --fix scattr"
ruff-lint-check = "ruff check scattr"
ruff-format = "ruff format ."
snakefmt = "snakefmt scattr"
snakefmt-check = "snakefmt --check scattr"

[tool.ruff]
select = ["E", "W", "N", "RUF", "I", "UP"]
line-length = 79
builtins = ["snakemake"]

[tool.snakefmt]
line_length = 79
include = '\.smk$|^Snakefile'
